# Dubbing-Pipeline

./: .env.example  .env.secrets.example  .gitignore  CHANGELOG.md  Makefile  README-deploy.md  README.md  constraints.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_run.sh
.github/workflows/: ci-core.yml  ci-release.yml  ci.yml
Output/: Test.dub.mkv  Test.manualsubs.dub.mkv  auth.db  jobs.db
Output/Test/: Test.json  diarization.json  dub.mkv  manual.srt  translated.json  tts_manifest.json
Output/sample/: diarization.json  dub.mkv  sample.aligned.srt  sample.dub.mkv  sample.json  translated.json  tts_manifest.json
_tmp_director/expressive/: director_plans.jsonl
_tmp_ops/Output/: auth.db
_tmp_ops2/Output/: auth.db  jobs.db
_tmp_ops3/Output/: auth.db  jobs.db
_tmp_pg_filter/: pg_filter_report.json
_tmp_qa_job/: translated.json  tts_manifest.json
_tmp_qa_job/analysis/: music_regions.json
_tmp_qa_job/qa/: segment_scores.jsonl  summary.json  top_issues.md
_tmp_qa_job/review/: state.json
_tmp_sched/Output/: auth.db  jobs.db
_tmp_speaker_smoothing/analysis/: speaker_smoothing.json
_tmp_style_guide/: style_guide.json
backups/: backup-20260101-0254.manifest.json
config/: README.md  public_config.py  secret_config.py  settings.py
data/: characters.json
data/reports/default/: season_report.md
deploy/: compose.public.yml  compose.tunnel.yml
deploy/caddy/: Caddyfile
docker/: Caddyfile  Dockerfile  Dockerfile.cuda  Makefile  compose.golden_path.tailscale.yml  constraints.txt  docker-compose.yml
docker/compose/: redis.yml
docker/ntfy/: docker-compose.yml  server.yml.example
docs/: CI.md  CLEAN_SETUP_GUIDE.txt  CLI.md  CONCURRENCY.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  FEATURES.md  FEATURES_PRO_UPGRADE_PLAN.md  FRESH_MACHINE_SETUP.md  FRESH_MACHINE_SMOKE.md  GOLDEN_PATH_TAILSCALE.md  MARKER_MIGRATION.md  OVERVIEW.md  P0_FIX_MAP.md  P0_SECURITY_CHECKLIST.md  P1_FIX_MAP.md  P2_FIX_MAP.md  PRIVACY.md  PRIVACY_GUARDRAILS_PLAN.md  QUEUE.md  RELEASE_CHECKLIST.md  RELIABILITY_TESTS.md  SCALE.md  SCALE_PATH.md  SECURITY.md  SECURITY_POSTURE.md  SETUP.md  SETUP_WIZARD.md  SETUP_WIZARD_PLAN.md  TROUBLESHOOTING.md  TRUSTED_SHARED_LIBRARY.md  TRUSTED_SHARED_LIBRARY_POLICY.md  UPGRADE_PLAN_RENAME_QUEUE_SMOKE.md  V0_SECURITY_CHECKLIST.md  WEB_MOBILE.md  example_setup_report_container.txt  example_setup_report_host.txt  feature_audit.md  fix_plan_bad_ugly_shutdown_deps_docs.md  hardening_audit.md  (+39 more)
docs/advanced/: README.md
logs/: app.log.legacy-20260101021856
projects/example/: mix.yaml  profile.yaml  qa.yaml  style_guide.yaml
samples/: README.md
scripts/: check_no_secrets.py  check_no_sensitive_runtime_files.py  check_no_tracked_artifacts.py  cleanup_git_artifacts.ps1  cleanup_git_artifacts.sh  collect_diagnostics.py  dev_install.sh  doctor_host.py  download_models.py  e2e_cancel_midrun.py  e2e_concurrency_two_users.py  e2e_ffmpeg_cases.py  e2e_gpu_sanity.py  e2e_job_recovery.py  e2e_redis_fallback.py  e2e_restart_worker_midrun.py  e2e_smoke_cli.py  e2e_smoke_web.py  e2e_two_users_submit.py  e2e_upload_resume.py  library_full_gate.py  migrate_markers.py  mobile_gate.py  p0_gate.py  p1_gate.py  p2_gate.py  package_release.py  polish_gate.py  post_upgrade_gate.py  print_effective_settings.py  print_routes.py  privacy_gate.py  reconcile_storage.py  run_ci_local.ps1  run_ci_local.sh  run_dev.ps1  run_dev.sh  run_doctor_quick.sh  run_prod.ps1  run_prod.sh  (+116 more)
scripts/remote/: tailscale_check.py  tailscale_setup.md
scripts/remote/cloudflared/: README.md  cloudflared_check.py  config.yml
src/anime_dubbing_v1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anime_v1/: cli.py  ui.py
src/anime_v1/stages/: audio_extractor.py  diarisation.py  downloader.py  lipsync.py  mkv_export.py  separation.py  transcription.py  translation.py  tts.py
src/anime_v1/utils/: __init__.py  checkpoints.py  log.py
src/anime_v2/: __init__.py  cli.py  config.py  modes.py  realtime.py  server.py
src/anime_v2/api/: __init__.py  deps.py  middleware.py  models.py  remote_access.py  routes_admin.py  routes_audit.py  routes_auth.py  routes_jobs.py  routes_keys.py  routes_library.py  routes_runtime.py  routes_settings.py  security.py
src/anime_v2/audio/: mix.py  music_detect.py  separation.py  tracks.py
src/anime_v2/cache/: store.py
src/anime_v2/character/: cli.py
src/anime_v2/diarization/: __init__.py  smoothing.py
src/anime_v2/expressive/: director.py  policy.py  prosody.py
src/anime_v2/gates/: license.py
src/anime_v2/jobs/: context.py  (+8 more)
src/dubbing_pipeline/: __init__.py  __main__.py  batch_worker.py  cli.py  config.py  modes.py  realtime.py  server.py  store_backend.py
src/dubbing_pipeline_legacy/: cli.py
tests/: conftest.py  marker_helpers.py  route_map_snapshot.json  test_artifacts_qr.py  test_audit_logging.py  test_audit_recent.py  test_basic.py  test_char_store_encryption.py  test_checkpoint.py  test_csrf.py  test_dashboard_api.py  test_db_schema_new_tables.py  test_diar.py  test_doctor_hardening.py  test_doctor_redaction.py  test_doctor_smoke.py  test_draining.py  test_export.py  test_glossary_pronunciation.py  test_idempotency.py  test_imports_smoke.py  test_invite_only_no_signup.py  test_invites.py  test_job_detail_api.py  test_job_limits.py  test_job_visibility.py  test_library_migration_no_orphans.py  test_library_search_sort.py  test_library_visibility_enforcement_shared_global.py  test_limits_and_backpressure.py  test_log_redaction.py  test_logging_redaction.py  test_marker_compat.py  test_mode_contract.py  test_model_manager.py  test_no_policy_placeholders.py  test_object_level_access.py  test_object_level_auth.py  test_pipeline_metrics.py  test_policy_dependency_coverage.py  (+55 more)
tests/_helpers/: auth.py  media.py  redis.py  runtime_paths.py  smoke_fresh_machine.py
tests/fixtures/: routes_snapshot.txt
tests/golden/: effective_high_cpu.json  effective_low_cpu.json  effective_medium_cpu.json
tools/: build_voice_db.py
voices/: presets.json  registry.json
voices/presets/: README.md
(+354 files in other folders)
